data/derived/fa15/progs/unify/prog0163.ml.out
Characters 72-77:
  total + mulByDigit i-1 l;;
  ^^^^^
Error: This expression has type int list
       but an expression was expected of type int
